--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,34 @@
 .App {
   text-align: center;
+  width: 650px;
+  padding: 20px 0;
+  background-color: #2196F3;
 }
 input {
   text-align:right;
+  font-size: 60px;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.item1 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
 .btn
 {
     background-color: rgb(7, 55, 99);
